# Dodsterp

./: .env.example  .gitignore  README.md  TODO.md  bot.py  index.html  keyboards.py  keylogger.py  requirements.txt  screenlock.py  sms_services.py
.github/workflows/: deploy.yml
.kiro/specs/walking-simulator/: design.md  requirements.md  tasks.md
assets/: index-Bu_Vye52.js  three-CQrPw82D.js
cs2-trainer/: .gitignore  CMakeLists.txt  README.md
cs2-trainer/data/: .gitkeep
cs2-trainer/src/: dllmain.cpp  main.cpp  math.hpp  offsets.cpp  offsets.hpp  process.cpp  process.hpp
cs2-trainer/src/overlay/: hook.cpp  hook.hpp  menu.cpp  menu.hpp  renderer.cpp  renderer.hpp  theme.cpp  theme.hpp
cs2-trainer/src/sdk/: player.cpp  player.hpp
cs2_cheat/: .gitignore  CMakeLists.txt  README.md
cs2_cheat/src/: esp.cpp  esp.hpp  main.cpp  math.cpp  math.hpp  memory.cpp  memory.hpp  offsets.hpp  overlay.cpp  overlay.hpp  sdk.cpp  sdk.hpp
kiosk/: README.md  main.py
launcher/: CMakeLists.txt  README.md
launcher/src/: main.cpp
launcher/src/inject/: manual_map.cpp  manual_map.hpp
lockscreen/: README.md  lock.py
wanderworld/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
wanderworld/src/: main.ts
wanderworld/src/core/: Clock.ts  Engine.ts  Renderer.ts  Scene.ts
wanderworld/src/input/: InputManager.ts
wanderworld/src/player/: CameraController.ts  Player.ts
wanderworld/src/render/: SkySystem.ts  Water.ts
wanderworld/src/ui/: Minimap.ts
wanderworld/src/utils/: deviceDetect.ts  math.ts  rng.ts
wanderworld/src/world/: Chunk.ts  Grass.ts  TerrainGenerator.ts  Vegetation.ts  World.ts  biomes.ts
